--- a/views/partial/navbar.ejs
+++ b/views/partial/navbar.ejs
@@ -11,6 +11,9 @@
             <li class="nav-item active">
                 <a class="nav-link" href="/register">Register</a>
             </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/book">Book</a>
+            </li>
 
         </ul>
 
