--- a/views/partial/navbar.ejs
+++ b/views/partial/navbar.ejs
@@ -1,5 +1,5 @@
+<h1>TB Sencho</h1>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
