--- a/views/book.ejs
+++ b/views/book.ejs
@@ -50,7 +50,12 @@
                 <td><%=data[i].year%></td>
                 <td><%=data[i].stock%></td>
                 <td><%=data[i].harga%> /day</td>
-                <td><a href="book/edit/<%=data[i].id%>" class="btn btn-success">Edit</a></td>
+                <td>
+                    <a href="book/edit/<%=data[i].id%>" class="btn btn-success">Edit</a>
+                    <a href="book/seeCustomer/<%=data[i].id%>" class="btn btn-success">See Cust</a>
+
+                </td>
+
             </tr>
             <% } %>
         </tbody>
