--- a/views/partial/navbar.ejs
+++ b/views/partial/navbar.ejs
@@ -1,20 +1,22 @@
-<h1>TB Sencho</h1>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <h1>TB Sencho</h1>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
                 <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="/login">Login</a>
+                <a class="nav-link" href="/auth/login">Login</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="/register">Register</a>
+                <a class="nav-link" href="/auth/register">Register</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="/book">Book</a>
             </li>
-
+            <li class="nav-item active">
+                <a class="nav-link" href="/auth/logout">Logout</a>
+            </li>
         </ul>
 
     </div>
