--- a/views/book.ejs
+++ b/views/book.ejs
@@ -51,9 +51,10 @@
                 <td><%=data[i].stock%></td>
                 <td><%=data[i].harga%> /day</td>
                 <td>
+                    <a href="book/view/<%=data[i].id%>" class="btn btn-success">View</a>
                     <a href="book/edit/<%=data[i].id%>" class="btn btn-success">Edit</a>
                     <a href="book/seeCustomer/<%=data[i].id%>" class="btn btn-success">See Cust</a>
-
+                    <a href="book/upload/<%=data[i].id%>" class="btn btn-success">Upload</a>
                 </td>
 
             </tr>
