--- a/views/addBook.ejs
+++ b/views/addBook.ejs
@@ -11,6 +11,11 @@
 
 <body>
     <%- include('partial/navbar') %>
+    <% if(err){%>
+    <div class="alert alert-danger" role="alert">
+        <%= err %>
+    </div>
+    <%} %>
     <form action="/book/addDataPostgree" method="POST">
         <div class="form-group">
             <label for="title">Title</label>
@@ -27,6 +32,9 @@
         <div class="form-group">
             <label for="stock">Stock</label>
             <input type="number" class="form-control" placeholder="Enter stock" name="stock">
+        </div>
+        <div class="form-group">
+            <input type="hidden" class="form-control" placeholder="Enter stock" name="readyStock" value=0>
         </div>
         <div class="form-group">
             <label for="harga">Price</label>
