--- a/views/book.ejs
+++ b/views/book.ejs
@@ -19,8 +19,9 @@
     </small>
     <% } %>
 
+    <% if(role == 'Admin') { %>
     <h4 style="text-align: center;"><a href="/book/add">Add Book</a></h4>
-
+    <% } %>
     <form class="form-inline my-2 my-lg-0" action="/book/search" method="GET">
         <select class="form-control" name="searchBy">
             <option value="author">Author</option>
@@ -38,6 +39,7 @@
                 <th scope="col">Author</th>
                 <th scope="col">Released Year</th>
                 <th scope="col">Stock</th>
+                <th scope="col">Ready stock</th>
                 <th scope="col">Price</th>
                 <th scope="col">Option</th>
             </tr>
@@ -49,13 +51,28 @@
                 <td><%=data[i].author%></td>
                 <td><%=data[i].year%></td>
                 <td><%=data[i].stock%></td>
+                <td><%=data[i].readyStock%></td>
                 <td><%=data[i].harga%> /day</td>
                 <td>
+                    <% if(role == 'Admin') { %>
                     <a href="book/view/<%=data[i].id%>" class="btn btn-success">View</a>
                     <a href="book/edit/<%=data[i].id%>" class="btn btn-success">Edit</a>
-                    <a href="book/rent/<%=data[i].id%>" class="btn btn-success">Rent</a>
                     <a href="book/seeCustomer/<%=data[i].id%>" class="btn btn-success">See Cust</a>
                     <a href="book/upload/<%=data[i].id%>" class="btn btn-success">Upload</a>
+                    <% } else{%>
+
+
+                    <a href="book/view/<%=data[i].id%>" class="btn btn-success">View</a>
+                    <% if(`${data[i].stock}` > 0) { %>
+                    <a href="book/rent/<%=data[i].id%>" class="btn btn-success">Rent</a>
+                    <% } %>
+                    <% console.log(data[i].stock, data[i].readyStock) %>
+                    <% if(`${data[i].stock}` != `${data[i].readyStock}`) { %>
+                    <a href="book/return/<%=data[i].id%>" class="btn btn-success">Return</a>
+                    <% } %>
+                    <a href="book/seeCustomer/<%=data[i].id%>" class="btn btn-success">See Cust</a>
+
+                    <% } %>
                 </td>
             </tr>
             <% } %>
