--- a/views/editBook.ejs
+++ b/views/editBook.ejs
@@ -27,7 +27,8 @@
         </div>
         <div class="form-group">
             <label for="stock">Stock</label>
-            <input type="number" class="form-control" placeholder="Enter stock" name="stock" value="<%= data.stock %>">
+            <input type="number" class="form-control" placeholder="Enter stock" name="stock" value="<%= data.stock %>"
+                readonly>
         </div>
         <div class="form-group">
             <label for="harga">Price</label>
