--- a/views/book.ejs
+++ b/views/book.ejs
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <%- include('partial/navbar') %>
+    <%- include('partial/navbar',{session:role}) %>
 
         <h2>List</h2>
 
