--- a/views/partial/navbar.ejs
+++ b/views/partial/navbar.ejs
@@ -6,17 +6,20 @@
                 <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="/auth/login">Login</a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="/auth/register">Register</a>
-            </li>
-            <li class="nav-item active">
                 <a class="nav-link" href="/book">Book</a>
             </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="/auth/logout">Logout</a>
-            </li>
+            <% if(session){ %>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/auth/logout">Logout</a>
+                </li>
+                <% }else{ %>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/auth/login">Login</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/auth/register">Register</a>
+                    </li>
+                    <% } %>
         </ul>
 
     </div>
