--- a/views/uploadBook.ejs
+++ b/views/uploadBook.ejs
@@ -10,16 +10,16 @@
 </head>
 
 <body>
-    <%- include('partial/navbar') %>
-    <div class="container">
-        <h2>File Upload</h2>
-        <form action="/book/upload/<%= data.id %>" method="POST" enctype="multipart/form-data">
-            <div class="form-group">
-                <input type="file" class="form-control-file" name="bookImage">
-            </div>
-            <button type="submit" class="btn btn-primary">Save</button>
-        </form>
-    </div>
+    <%- include('partial/navbar',{session:session}) %>
+        <div class="container">
+            <h2>File Upload</h2>
+            <form action="/book/upload/<%= data.id %>" method="POST" enctype="multipart/form-data">
+                <div class="form-group">
+                    <input type="file" class="form-control-file" name="bookImage">
+                </div>
+                <button type="submit" class="btn btn-primary">Save</button>
+            </form>
+        </div>
 
 </body>
 
